Changed about-statement text align from justify to left to fix Firefox display problem

--- a/css/main.css
+++ b/css/main.css
@@ -240,6 +240,7 @@ footer {
   font-size: 1.25em;
   font-weight: 700;
   margin: 50px 0;
+  text-align: left;
 }
 
 /* ---------- Portfolio Page ---------- */
